--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/apsabado
-spring.datasource.username=root
-spring.datasource.password=mateo121
+spring.datasource.url=jdbc:mysql://u3tdm60orcc5uwvu:WwXh9tN5wIZLgDgYGGgK@b84g44behwwxvxy9sjxx-mysql.services.clever-cloud.com:3306/b84g44behwwxvxy9sjxx
+spring.datasource.username=u3tdm60orcc5uwvu
+spring.datasource.password=WwXh9tN5wIZLgDgYGGgK
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
